--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
   <script src="ace-builds/src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
 </head>
@@ -17,10 +19,12 @@
     <div class="nav-bar">
       <div class="module left">
         <a href="/">
-          <div class="vnu"><img class="logo logo-dark" alt="Foundry" src="https://codingblocks.com/img/cb/cb_tshirt_logo.png"></div>
+          <div id="myimg" class="vnu"><img class="logo logo-dark" alt="Foundry" src="https://codingblocks.com/img/cb/cb_tshirt_logo.png"></div>
         </a>
       </div>
       <h2 class="vnu">Tic Tac Toe</h2>
+      <button id="screen-but" class="btn btn-filled btn-sm hoverlight">Go full screen</button>
+
     </div>
   </nav>
   <div class="controls">
@@ -65,6 +69,7 @@
             <td id="square_nine"></td>
           </tr>
         </table>
+        
       </div>
     </div>
     <div class="col-sm-4 col-xs-12">
@@ -78,9 +83,14 @@
           return 0;
         }
         play(getRow(),getCol());
+        
       </div>
+
     </div>
+
   </div>
+    <!-- <button id="editor-but" class="btn btn-filled btn-sm hoverlight">Full Screen</button> -->
+    <i id="editor-but" class="fa fa-arrows-alt" aria-hidden="true"></i>
 
   <script>
     var editor = ace.edit("editor");
@@ -135,7 +145,9 @@
   <script src="js/multi.js" type="text/javascript"></script>
   <script src="js/random.js" type="text/javascript"></script>
   <script src="js/chal.js" type="text/javascript"></script>
+  <script src="js/fullScreen.js" type="text/javascript"></script>
   <script src="js/game.js" type="text/javascript"></script>
+
 </body>
 
 </html>
